--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: World Happiness and Well-Being
+description: Discover the factors at play for happiness and well-being worldwide!
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
