Update _config.yml to get rid of header

--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: World Happiness and Well-Being
 description: Discover the factors at play for happiness and well-being worldwide!
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-cayman
+theme: 
