--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: World Happiness and Well-Being
+name: World Happiness and Well-Being
+title: null
 description: Discover the factors at play for happiness and well-being worldwide!
 show_downloads: false
 google_analytics:
-theme: 
+theme: jekyll-theme-cayman
